--- a/.env
+++ b/.env
@@ -1,22 +1,12 @@
-# JWT Configuration
+# JWT Secret for authentication
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # Server Configuration
 PORT=5000
 NODE_ENV=development
 
-# Database Configuration
-DATABASE_URL=./database.sqlite
-
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
 
-# Mock Analysis Configuration (no API keys needed)
-MOCK_ANALYSIS=true
-
-# Optional: Nutritionix API (not used with mock analysis)
-NUTRITIONIX_APP_ID=8c766f3b
-NUTRITIONIX_APP_KEY=b86ac4ebaa853e7e5de1e60717df4507
-
-# Optional: Google Cloud Vision (not used with mock analysis)
-GOOGLE_APPLICATION_CREDENTIALS=
+# Note: No external API keys needed - using mock data only
+# This eliminates API costs and dependencies
